--- a/index.css
+++ b/index.css
@@ -116,6 +116,7 @@ body{
 .title2{
   grid-area: t2;
   background-image: url(title2.jpg);
+  background-size: cover;
 }
 .media{
   grid-area: m;
@@ -139,6 +140,7 @@ body{
 .title3{
   grid-area: t3;
   background-image: url("title3.jpg");
+  background-size: cover;
   color: white;
   font-size: 50pt;
   display: flex;
