--- a/index.css
+++ b/index.css
@@ -89,7 +89,7 @@ body{
   transition: 0.2s
 }
 .item:hover{
-    box-shadow: 20px 20px;
+    box-shadow: 0 0 20px;
 }
 .item:hover > a > img{
   opacity: 0.5;
